
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int end; int data; } ;
typedef TYPE_1__* STREAM ;


 int fprintf (int ,char*) ;
 int send (int ,int,int,int ) ;
 int sock ;
 int stderr ;

void
tcp_send(STREAM s)
{
 int length = s->end - s->data;
 int sent, total = 0;

 while (total < length)
 {
  sent = send(sock, s->data + total, length - total, 0);
  if (sent <= 0)
  {
   fprintf(stderr, "\n[=] Check port 3389 on target host. It should be offline.\n\n");
   return;
  }

  total += sent;
 }
}
